--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -142,6 +142,8 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="BZZ-L7-Kao"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="350" id="j3M-aK-Q6t"/>
+                                    <constraint firstAttribute="height" constant="359" id="xpf-rB-Ic8"/>
                                 </constraints>
                                 <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                             </stackView>
@@ -152,11 +154,14 @@
                             <constraint firstAttribute="trailing" secondItem="soJ-1E-027" secondAttribute="trailing" constant="-164.5" id="AO2-8k-jG1"/>
                             <constraint firstItem="oKl-H7-s5r" firstAttribute="centerX" secondItem="soJ-1E-027" secondAttribute="centerX" id="C5n-0r-Rxc"/>
                             <constraint firstItem="oKl-H7-s5r" firstAttribute="centerX" secondItem="4BK-eR-Gty" secondAttribute="centerX" id="CQ0-eR-PKv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cQN-Fj-MrG" secondAttribute="bottom" constant="104" id="Eaw-U8-b7Z"/>
                             <constraint firstItem="f3Q-zN-Dvo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="109" id="GNv-Ar-yYm"/>
                             <constraint firstItem="f3Q-zN-Dvo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="144" id="Hb9-Xc-Zfq"/>
                             <constraint firstItem="oKl-H7-s5r" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="189" id="IwD-aq-qvP"/>
                             <constraint firstItem="oKl-H7-s5r" firstAttribute="centerX" secondItem="f3Q-zN-Dvo" secondAttribute="centerX" id="KFF-JE-bVu"/>
                             <constraint firstItem="f3Q-zN-Dvo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="109" id="WcY-h8-RIj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cQN-Fj-MrG" secondAttribute="trailing" constant="32" id="Z3A-Mc-T7W"/>
+                            <constraint firstItem="cQN-Fj-MrG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="bpk-xS-5ph"/>
                             <constraint firstItem="oKl-H7-s5r" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="69" id="ccS-8y-pov"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="f3Q-zN-Dvo" secondAttribute="trailing" constant="144" id="eI2-RO-XAO"/>
                             <constraint firstItem="cQN-Fj-MrG" firstAttribute="top" secondItem="oKl-H7-s5r" secondAttribute="bottom" constant="8" id="eZj-Tw-PsI"/>
@@ -170,6 +175,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cQN-Fj-MrG" secondAttribute="bottom" constant="104" id="sXj-i6-jql"/>
                             <constraint firstItem="cQN-Fj-MrG" firstAttribute="top" secondItem="oKl-H7-s5r" secondAttribute="bottom" constant="8" id="w67-vp-kkO"/>
                             <constraint firstItem="soJ-1E-027" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-164.5" id="wAO-oU-iaJ"/>
+                            <constraint firstItem="cQN-Fj-MrG" firstAttribute="top" secondItem="oKl-H7-s5r" secondAttribute="bottom" constant="8" id="xQW-sd-2uY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oKl-H7-s5r" secondAttribute="trailing" constant="69" id="zQM-o8-m6X"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
